@@ -68,6 +68,7 @@
   *  - Fixed USB_CurrentMode not being reset to USB_MODE_NONE when the USB interface is shut down and both Host and Device modes can be
   *    used (thanks to Daniel Levy)
   *  - Fixed TeensyHID bootloader not enumerating to the host correctly
+  *  - Fixed AVRISP project timeouts not checking for the correct timeout period (thanks to Carl Ott)
   *
   *  \section Sec_ChangeLog091122 Version 091122
   *
